# postgres-mcp-server-rust

./: .env.example  .gitignore  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.my.md  USAGE.md  docker-compose.yml  init.sql  mcp-config-example.json  myNotes.md  runMCP.sh  setup.sh  test_mcp.sh
.claude/: settings.local.json
cc/: 00console.txt  00runMCPoutput.json  00spec.md  01console.txt  01prompt.txt
claudeCode/: 00prompt.txt  01prompt.txt  01spec.md
src/: db.rs  handler.rs  main.rs  resources.rs  tools.rs
