[package]
name = "postgres_mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
